// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Localization should render en-hk 1`] = `
<FooterHK
  country="hk"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render en-hk fat footer 1`] = `
<FooterHK
  country="hk"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={true}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render en-id 1`] = `
<FooterHK
  country="id"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render en-sg 1`] = `
<FooterHK
  country="sg"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render en-th 1`] = `
<FooterHK
  country="th"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render id-id 1`] = `
<FooterHK
  country="id"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="id"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render th-th 1`] = `
<FooterHK
  country="th"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="th"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={true}
/>
`;

exports[`Footer component Localization should render without offset if prop is passed 1`] = `
<FooterHK
  country="hk"
  domainUrl="jobsdb.com"
  hasCompanyProfile={true}
  hrefLink={[Function]}
  isExpandedVersion={false}
  language="en"
  linkRenderer={[Function]}
  showHeaderActionTrayOffset={false}
/>
`;
